--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -320,7 +320,7 @@ The merging black holes may not have formed in the same binary at all.  Instead,
 \item[e.] If the density of objects is high enough to ensure a suitable rate of interactions, the binary will be hardened until it is compact enough to merge through gravitational-wave emission, provided it does not get kicked out of the cluster through a recoil kick from the last interaction -- and even then, it may still go on to merge outside of the cluster.  
 \end{enumerate}
 
-The prospects for these dynamically formed merging binary black holes in globular clusters and young massive stellar clusters have been explored through a series of analytical estimates and numerical experiments by \cite{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Mapelli:2016,Rodriguez:2016} and others.  \citet{OLeary:2008} \citep[but see][]{Tsang:2013} and \citet{AntoniniPerets:2012} explored dynamical formation in galactic nuclei with a massive black hole, while \citet{MillerLauburg:2008} and \citet{AntoniniRasio:2016} argued that galactic nuclei without a massive black hole are a favoured site for dynamical formation, in part because the high escape velocity makes merger products more likely to be retained.  \citet{Bellovary:2016, Bartos:2016, Stone:2016, McKernan:2018, Tagawa:2020} described the role that an accretion disk in an active galactic nucleus could play in enhancing the rate of binary black hole mergers.
+The prospects for these dynamically formed merging binary black holes in globular clusters and young massive stellar clusters have been explored through a series of analytical estimates and numerical experiments by \cite{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Mapelli:2016,Rodriguez:2016,Park:2017,FragioneKocsis:2018} and others.  \citet{OLeary:2008} \citep[but see][]{Tsang:2013} and \citet{AntoniniPerets:2012} explored dynamical formation in galactic nuclei with a massive black hole, while \citet{MillerLauburg:2008} and \citet{AntoniniRasio:2016} argued that galactic nuclei without a massive black hole are a favoured site for dynamical formation, in part because the high escape velocity makes merger products more likely to be retained.  \citet{Bellovary:2016, Bartos:2016, Stone:2016, McKernan:2018, Tagawa:2020} described the role that an accretion disk in an active galactic nucleus could play in enhancing the rate of binary black hole mergers.
 
 \subsubsection{A team effort: combining multiple interactions}
 
@@ -338,38 +338,38 @@ In this section we describe the expected hallmarks of each formation scenario in
 
 Other than the LIGO and Virgo sources, there are no known direct observations of binary black holes (except for a very speculative potential observation through microlensing \citep{Dong:2007}). As the population of gravitational-wave detections grows, so will our ability to infer merger rates and typical system properties from observed data; see the following section for a discussion of the current state of these efforts. In the meantime, our understanding of the expected merger rates and properties of binary black holes rests largely on theoretical modelling. 
 
-For the isolated binary evolution channel (\autoref{form:isol}) this modelling typically uses a population synthesis approach, i.e. forward modelling of large populations of stellar binaries distributed according to observed initial mass and separation distributions, some (small) fraction of which end up as merging binary black holes. Population synthesis techniques can be applied either to initial binaries at formation, or to specific observed systems at intermediate evolutionary stages, such as Cygnus X-1 \citep{Bulik:2008} and Cygnus X-3 \citep{CygnusX3:2012}.  
+For the isolated binary evolution channel (section \ref{form:isol}), this modelling typically uses a population synthesis approach, i.e. forward modelling of large populations of stellar binaries distributed according to observed initial mass and separation distributions, some (small) fraction of which end up merging as binary black holes. Population synthesis techniques can be applied either to initial binaries at formation, or to specific observed systems at intermediate evolutionary stages, such as Cygnus X-1 \citep{Bulik:2008,Neijssel:2020CygX1} and Cygnus X-3 \citep{CygnusX3:2012}.  
 
 Models of the dynamical formation channel are typically based on either (i) computationally expensive N-body cluster models with direct integration of the equations of motion for each object, or (ii) a less computationally costly Monte Carlo approach in which the evolution of the distribution of the cluster components in phase space is coupled with stochastically sampled strong 3-body and 4-body interactions modelled with few-body dynamics, or (iii) semi-analytical prescriptions that attempt to emulate these methods at a fraction of the computational cost. 
 
 \subsection{Merger rates}
 
-Here we outline high-level estimates of merger rates for each of the three candidate formation channels. The value of this back-of-the-envelope merger rate analysis is not so much in matching the rate inferred from gravitational-wave observations a posteriori as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).  That said, the merger rate predictions for isolated binary evolution via the common envelope phase are consistent with the observed rate of binary black hole mergers of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104} (see \citet{ratesdoc} for a slightly dated summary \ilya{-- the current estimates fall within the range of early predictions, at their upper end}); \ilya{predicted} dynamical formation rates tend toward the lower end of this range \citep{Rodriguez:2016,Park:2017,FragioneKocsis:2018}; and chemically homogeneous evolution could yield tens of high-mass mergers per Gpc$^{3}$ per yr$^{-1}$ in the local Universe \citep{MandeldeMink:2016,Marchant:2016}.
+Here we outline high-level estimates of merger rates for each of the three candidate formation channels. The value of this back-of-the-envelope merger rate analysis is not so much in matching the rate inferred from gravitational-wave observations a posteriori as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).  The merger rate predictions and observed rates are summarised by \cite{MandelBroekgaarden:2021} (see \cite{ratesdoc} for a historical summary from a decade earlier).  Broadly, predictions for isolated binary evolution, including contributions from chemically homogeneous evolution and population III stars, are consistent with or exceed the observed rate of binary black hole mergers of $23.9^{+14.3}_{-8.6}$ Gpc$^{-3}$ yr$^{-1}$ \citep{GWTC2:pop}, while  predicted dynamical formation rates (including contributions from globular, nuclear, and young stellar clusters, as well as hierarchical triples) tend toward the lower end of the observed merger rate.
 
 \subsubsection{Binary evolution via a common envelope}\label{sec:CErates}
 
 In order to survive an evolutionary pathway such as the one depicted in \autoref{fig:isol_binary}, a binary must (i) have the right component masses to form two black holes; (ii) have the right separation to avoid a premature merger, yet be close enough to interact; (iii) avoid disruption by supernova kicks; (iv) engage in and survive a common envelope phase; and (v) end up sufficiently compact at binary black hole formation to merge within the age of the Universe. We describe below the development of a ``Drake equation'' for the probability that an isolated stellar binary will end its life as a merging binary black hole, addressing each of these five factors in turn.   In reality, of course, the probabilities for each key stage are coupled in a rather complex manner.
 
 \begin{enumerate}
-	\item[(i)] The minimal initial stellar mass for forming a black hole is likely around $20 M_\odot$, so $f_\textrm{primary} \approx 0.1\%$ of all stars drawn from the \citet{Kroupa:2002} initial mass function will form black holes. Although this can be shifted somewhat by binary interactions, we will use this approximation for the purpose of this back-of-the-envelope calculation. Meanwhile, since the mass ratio between the primary and the secondary is roughly uniformly distributed \citep{Sana:2012,MoeDiStefano:2017}, roughly half of the secondaries will fall into the mass range of interest, $f_\textrm{secondary} \approx 0.5$.  
+	\item[(i)] The minimal initial stellar mass for forming a black hole is likely around $20 M_\odot$, so $f_\textrm{primary} \approx 0.1\%$ of all stars drawn from the \citet{Kroupa:2002} initial mass function will form black holes. Although this can be shifted somewhat by binary interactions, we will use this approximation for the purpose of this back-of-the-envelope calculation. Meanwhile, since the mass ratio between the secondary and the primary is roughly uniformly distributed \citep{Sana:2012,MoeDiStefano:2017}, roughly half of the secondaries will fall into the mass range of interest, $f_\textrm{secondary} \approx 0.5$.  
 
-\item[(ii)] Initial binary  separations are observed to be distributed uniformly in the logarithm, $p(a) \propto 1/a$ \citep{Opik:1924}.  The first episode of mass transfer from the donor should typically be ``case B'' mass transfer (i.e., the donor should evolve beyond core hydrogen burning, but not yet beyond core helium burning); stars expand by several orders of magnitude during this phase, which means that the range of initial separations occupies a significant logarithmic fraction of the total initial range of separations, so $f_\textrm{init sep} \approx 0.5$.  
+\item[(ii)] Initial binary  separations are observed to be distributed uniformly in the logarithm, $p(a) \propto 1/a$ \citep{Opik:1924}.  The first episode of mass transfer from the donor should typically be ``case B'' mass transfer (i.e., the donor should evolve beyond core hydrogen burning, but not yet beyond core helium burning).  Stars expand by several orders of magnitude during this phase, which means that the range of initial separations occupies a significant logarithmic fraction of the total initial range of separations, so $f_\textrm{init sep} \approx 0.5$.  
 
 \item[(iii)]  We assume that black holes receive low natal kicks and do not lose significant amounts of mass, so that supernovae do not significantly affect binary parameters, i.e. $f_\textrm{survive SN1} \approx f_\textrm{survive SN2} \approx 1$.  
 
-\item[(iv)] The fraction of binaries that initiate and survive the common envelope phase during mass transfer from the secondary to the primary is perhaps the least certain.  Typically, dynamically unstable mass transfer is more likely for greater mass ratios of the donor to the accretor.  The accreting black hole in this case may only have a third of the initial mass of the primary, with the rest lost with the envelope and through winds, while the secondary donor may have increased its mass during the first mass transfer phase; even so, unless the secondary was initially close to the primary in mass, the mass ratio is unlikely to exceed $3:1$, which may be close to the threshold for initiating a common envelope phase.  The evolutionary state of the donor during the onset of mass transfer also plays an important role, setting both the amount by which the donor shrinks or expands in response to mass loss and the envelope binding energy.  Together, these constraints reduce the fraction of successful common envelope initiations and ejections to $f_\textrm{CE} \approx 0.1$.  
+\item[(iv)] The fraction of binaries that initiate and survive the common envelope phase during mass transfer from the secondary to the primary is perhaps the least certain.  Typically, dynamically unstable mass transfer is more likely for greater mass ratios of the donor to the accretor.  The accreting black hole in this case may only have a third of the initial mass of the primary, with the rest lost with the envelope and through winds, while the secondary donor may have increased its mass during the first mass transfer phase.  Even so, unless the secondary was initially close to the primary in mass, the mass ratio is unlikely to exceed $3:1$, which may be close to the threshold for initiating a common envelope phase \citep[e.g.,][]{Claeys:2014}.  The evolutionary state of the donor during the onset of mass transfer also plays an important role, setting both the amount by which the donor shrinks in response to mass loss and the envelope binding energy.  Together, these constraints reduce the fraction of successful common envelope initiations and ejections to $f_\textrm{CE} \approx 0.1$.  
 
 \item[(v)]  Finally, there is the question of final separation at second black hole formation, as only systems with separations smaller than those in \autoref{fig:periapsis} will merge in the age of the Universe.  The final separation after the common envelope ejection is set by the binding energy of the envelope at the time when the secondary initiates unstable mass transfer, which in turn depends on the binary separation at that time.  Therefore, very crudely, the flat-in-the-log distribution of initial binary separations persists to the final binary separation.  Since the delay time between formation and merger $\tau_\textrm{GW} \propto a^4$ is a power law in the separation, the delay time distribution also follows a flat-in-the-log distribution $p(\tau) \propto 1/\tau$.  Among the binaries that survive a common envelope the closest will be those whose separations just barely encompass a Wolf-Rayet star, i.e., with separations of a few solar radii (and merger times of a few million years).  The logarithmic distribution ensures that tens of percent of binaries that survive a common envelope will merge in the age of the Universe, $f_\textrm{merge} \approx 0.2$.
 \end{enumerate}
 
-Thus, our Drake\ilya{-like} equation is as follows:
+Thus, our Drake-like equation is as follows:
 \begin{eqnarray}
 f_\textrm{BBH} &=& f_\textrm{primary} \times f_\textrm{secondary} \times f_\textrm{init sep} \times f_\textrm{survive SN1} \times f_\textrm{CE} \times f_\textrm{survive SN2} \times f_\textrm{merge} \nonumber \\
  & \sim & 0.001 \times 0.5 \times 0.5 \times 1 \times 0.1 \times 1 \times 0.2 = 5 \times 10^{-6}.
 \end{eqnarray}
 Merging binary black holes are rare outcomes indeed!  [Merging binary neutron stars are similarly rare: while stars with initial masses sufficient to form a neutron star, between roughly 8 and 20 solar masses, are more common than the heavier stars necessary to form black holes, neutron star natal kicks and mass loss during supernovae are more likely to disrupt binaries; the expected yields for binary neutron star mergers are within an order of magnitude of those for binary black holes.]
 
-The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ yr$^{-1}$ \citep{MadauDickinson:2014}; for an average binary mass of $\sim 1 M_\odot$, the yield $f_\textrm{BBH} \sim 5 \times 10^{-6}$ corresponds to a binary black hole merger rate of $\sim 50$ Gpc$^{-3}$ yr$^{-1}$, or 5 per Myr for a Milky-Way equivalent galaxy with a space density of $0.01$ Mpc$^{-3}$.  Of course, the actual calculation of the binary merger rate requires significantly more care than the back-of-the-envelope model presented here, including accounting for the redshift-dependent metallicity-specific star formation history convolved with the time-delay distribution.  
+The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ yr$^{-1}$ \citep{MadauDickinson:2014}; for an average binary mass of $\sim 1 M_\odot$, the yield $f_\textrm{BBH} \sim 5 \times 10^{-6}$ corresponds to a binary black hole merger rate of $\sim 50$ Gpc$^{-3}$ yr$^{-1}$, or 5 per Myr for a Milky-Way equivalent galaxy with a space density of $0.01$ Mpc$^{-3}$.  Of course, the actual calculation of the binary merger rate requires significantly more care than the back-of-the-envelope model presented here, including accounting for the redshift-dependent metallicity-specific star formation history convolved with the time-delay distribution \citep{Belczynski:2010,Mapelli:2017,Klencki:2018,Chruslinska:2019,Neijssel:2019,ChruslinskaNelemans:2019,Tang:2020,Broekgaarden:2021,Santoliquido:2021}.  
 
 \subsubsection{Chemically homogeneous evolution}
 
@@ -386,12 +386,12 @@ Here, $f_\textrm{primary} \approx 2 \times 10^{-4}$, lower than the value in the
 
 We can estimate an upper limit on the merger rate of dynamically formed binary black holes by assuming that all black holes in a globular cluster undergo a single merger.  About 1 in a thousand stars are massive enough to become a black hole ($f_\textrm{primary} \approx 0.001$), so even a relatively large cluster with $2\times 10^6$ stars would produce at most 2000 black holes and 1000 mergers.  [Although repeated mergers are possible if the black hole merger product is retained in the cluster and merges again, they are very rare as gravitational-wave recoil kicks are overwhelmingly likely to eject a merger remnant from the cluster \citep{Rodriguez:2018}; in any case, even merging all black holes sequentially would increase this estimate by at most a factor of 2.]  If we imagine that the merger rate is uniform over the $\sim 10$-Gyr history of the Universe (if mergers predominantly happened early in the cluster history, the rate in the local Universe would be lower), and with a globular cluster space density of around 1 per Mpc$^3$, the {\it upper limit} on the merger rate from this channel is $\sim 1000 \times 10^{-10} \textrm{yr}^{-1} \times 1 \textrm{ Mpc}^{-3} \approx 100$ Gpc$^{-3}$ yr$^{-1}$.
 
-Young massive star clusters could add to this rate \citep[e.g.,][]{Ziosi:2014,Banerjee:2021}, as could galactic nuclear clusters \citep[e.g.,][]{MillerLauburg:2008,Bartos:2016,Stone:2016,AntoniniRasio:2016}.  On the other hand, in practice, the overall merger rate from the dynamical formation channel is likely to be at least a factor of a few lower for the following reasons:
+Young massive star clusters could add to this rate \citep[e.g.,][]{Ziosi:2014,Kumamoto:2020,Santoliquido:2020,Banerjee:2021}, as could galactic nuclear clusters \citep[e.g.,][]{MillerLauburg:2008,AntoniniRasio:2016,Hoang:2018,Stephan:2019,Grobner:2020,Tagawa:2020}.  On the other hand, in practice, the overall merger rate from the dynamical formation channel is likely to be at least a factor of a few lower for the following reasons:
 \begin{enumerate}
 	\item [1.]
-Some single black holes will be ejected from the cluster during the three-body interactions that harden the binaries.  If the masses of all interacting objects are similar, the ejected object receives a kick that is comparable to the orbital speed of the binary.  The last scattering interaction must harden the binary to a sufficiently small separation for gravitational-wave emission to take over. The minimum orbital velocity of an equal-mass circular binary that can merge in the age of the Universe through gravitational-wave emission is \resp{$\sim 500$ km s$^{-1}$}; this scales only weakly with the binary's mass, as $v \propto \sqrt{M/a}  \propto \sqrt{M/M^{3/4}} \propto M^{1/8}$ (see \autoref{fig:periapsis} and \citet{Peters:1964}).   This minimum velocity is larger than the typical globular cluster escape velocity, $\lesssim 50$ km s$^{-1}$, hence many interlopers, including some black holes, will be ejected.
+Some single black holes will be ejected from the cluster during the three-body interactions that harden the binaries.  If the masses of all interacting objects are similar, the ejected object receives a kick that is comparable to the orbital speed of the binary.  The last scattering interaction must harden the binary to a sufficiently small separation for gravitational-wave emission to take over. The minimum orbital velocity of an equal-mass circular binary that can merge in the age of the Universe through gravitational-wave emission is $\sim 500$ km s$^{-1}$; this scales only weakly with the binary's mass, as $v \propto \sqrt{M/a}  \propto \sqrt{M/M^{3/4}} \propto M^{1/8}$ (see \autoref{fig:periapsis} and \citet{Peters:1964}).   This minimum velocity is larger than the typical globular cluster escape velocity, $\lesssim 50$ km s$^{-1}$, hence many interlopers, including some black holes, will be ejected.
 	\item[2.]
-Following such a 3-body interaction, the binary itself must recoil in the opposite direction from the ejected single star (to conserve momentum). Although this recoil velocity is reduced by the ratio of the binary's mass to the interloper mass --- typically greater than $2:1$, as the lightest body is ejected --- the binary may still be ejected from the cluster before it is sufficiently tight to merge through radiation reaction alone.
+Following such a 3-body interaction, the binary itself must recoil in the opposite direction from the ejected single star in order to conserve momentum. Although this recoil velocity is reduced by the ratio of the binary's mass to the interloper mass --- typically greater than $2:1$, as the lightest body is most likely ejected --- the binary may still be ejected from the cluster before it is sufficiently tight to merge through radiation reaction alone.
 \item[3.] If most mergers happen soon after globular cluster formation, the local merger rate would be low because the majority of globular clusters are old \citep{Rodriguez:2016big}.
 \end{enumerate} 
 
