--- a/Mandel.bib
+++ b/Mandel.bib
@@ -26213,33 +26213,39 @@ archivePrefix = {arXiv},
        author = {{Abbott}, R. and {Abbott}, T.~D. and {Abraham}, S. and {Acernese}, F. and
          others},
         title = "{GW190521: A Binary Black Hole Merger with a Total Mass of $150 ~ M_{\odot}$}",
-      journal = {arXiv e-prints},
+     journal = {\prl},
      keywords = {General Relativity and Quantum Cosmology, Astrophysics - High Energy Astrophysical Phenomena},
          year = 2020,
         month = sep,
-          eid = {arXiv:2009.01075},
-        pages = {arXiv:2009.01075},
+       volume = {125},
+       number = {10},
+          eid = {101102},
+        pages = {101102},
+          doi = {10.1103/PhysRevLett.125.101102},
 archivePrefix = {arXiv},
        eprint = {2009.01075},
  primaryClass = {gr-qc},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200901075T},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020PhRvL.125j1102A},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @ARTICLE{GW190521:astro,
        author = { {Abbott}, R. and {Abbott}, T.~D. and {Abraham}, S. and {Acernese}, F. and
          {Ackley}, K. and others},
-        title = "{Properties and astrophysical implications of the 150 Msun binary black hole merger GW190521}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+        title = "{Properties and Astrophysical Implications of the 150 M$_{{\ensuremath{\odot}}}$ Binary Black Hole Merger GW190521}",
+      journal = {\apjl},
          year = 2020,
         month = sep,
-          eid = {arXiv:2009.01190},
-        pages = {arXiv:2009.01190},
+       volume = {900},
+       number = {1},
+          eid = {L13},
+        pages = {L13},
+          doi = {10.3847/2041-8213/aba493},
 archivePrefix = {arXiv},
        eprint = {2009.01190},
  primaryClass = {astro-ph.HE},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200901190T},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...900L..13A},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -30923,4 +30929,40 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Farmer:2019,
+       author = {{Farmer}, R. and {Renzo}, M. and {de Mink}, S.~E. and {Marchant}, P. and {Justham}, S.},
+        title = "{Mind the Gap: The Location of the Lower Edge of the Pair-instability Supernova Black Hole Mass Gap}",
+      journal = {\apj},
+     keywords = {Massive stars, Stellar mass loss, Supernovae, Astrophysical black holes, Stellar mass black holes, Stellar evolution, 732, 1613, 1668, 98, 1611, 1599, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2019,
+        month = dec,
+       volume = {887},
+       number = {1},
+          eid = {53},
+        pages = {53},
+          doi = {10.3847/1538-4357/ab518b},
+archivePrefix = {arXiv},
+       eprint = {1910.12874},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...887...53F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
+@ARTICLE{Rodriguez:2019,
+       author = {{Rodriguez}, Carl L. and {Zevin}, Michael and {Amaro-Seoane}, Pau and {Chatterjee}, Sourav and {Kremer}, Kyle and {Rasio}, Frederic A. and {Ye}, Claire S.},
+        title = "{Black holes: The next generation{\textemdash}repeated mergers in dense star clusters and their gravitational-wave properties}",
+      journal = {\prd},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+         year = 2019,
+        month = aug,
+       volume = {100},
+       number = {4},
+          eid = {043027},
+        pages = {043027},
+          doi = {10.1103/PhysRevD.100.043027},
+archivePrefix = {arXiv},
+       eprint = {1906.10260},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019PhRvD.100d3027R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
