--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -398,20 +398,24 @@ Following such a 3-body interaction, the binary itself must recoil in the opposi
 
 \subsection{System Properties}
 \subsubsection{Masses}
-The masses of black holes in the binaries of interest will not change appreciably after the black holes are formed by stellar collapse or supernova explosions.  The first black hole to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass would take more than 100 million years, as the mass-gain rate is $\dot{M}/M \lesssim 10^{-8}$ yr$^{-1}$ at the Eddington limit, and the massive companion will only survive as a non-degenerate potential donor star for a small fraction of that time. No further accretion is expected in the system after the second compact object is formed. The mass of each black hole is thus almost equal to its mass at formation. 
+The masses of black holes in the binaries of interest will not change appreciably after the black holes are formed by stellar collapse or supernova explosions.  The first black hole to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass would take more than 100 million years, as the mass-gain rate is $\dot{M}/M \lesssim 10^{-8}$ yr$^{-1}$ at the Eddington limit, and the massive companion will only survive as a non-degenerate potential donor star for a small fraction of that time (but see \cite{Eldridge:2017,Bavera:2020,vanSon:2020}, who allow super-Eddington accretion). No further accretion is expected in the system after the second compact object is formed. The mass of each black hole is thus almost equal to its mass at formation. 
 
-The classical isolated binary evolution channel can produce binary black holes with a broad range of masses, matching all observations to date \citep[e.g.,][]{Stevenson:2017,Eldridge:2017,GiacobboMapelli:2018} as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments, and to make a significant contribution to the detected population because more massive binaries emit more energy in gravitational waves \citep{Dominik:2014}; the effect of metallicity is discussed further in \autoref{environ} below. 
+The classical isolated binary evolution channel can produce binary black holes with a broad range of masses, matching most observations to date \citep[e.g.,][]{Stevenson:2017,Eldridge:2017,GiacobboMapelli:2018} as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments, and to make a significant contribution to the detected population because more massive binaries emit more energy in gravitational waves \citep{Dominik:2014}; the effect of metallicity is discussed further in section \ref{environ} below. 
 
-Dynamical formation in globular clusters can also lead to a range of masses, but may favour more massive binaries: lighter black holes would be ejected by heavier ones in three-body interactions \citep{Rodriguez:2015}. The mass distribution is sensitive to natal kicks, which may eject black holes at formation \citep{Zevin:2017}.  \citet{Chatterjee:2017} argue that dynamical formation could explain all black-hole binary merger observations to date, with old, metal-poor clusters preferentially contributing more massive black-hole binaries and younger, metal-rich clusters contributing lighter binaries.
+Dynamical formation in globular clusters can also lead to a range of masses, but may favour more massive binaries: lighter black holes would be ejected by heavier ones in three-body interactions \citep{Rodriguez:2015}. The mass distribution is sensitive to natal kicks, which may eject black holes at formation \citep{Zevin:2017}.  For example, \citet{Chatterjee:2017} argued that dynamical formation could explain most black-hole binary merger observations, with old, metal-poor clusters preferentially contributing more massive black-hole binaries and younger, metal-rich clusters contributing lighter binaries.
  
 Chemically homogeneous evolution can only produce massive binaries, with total black-hole mass above $\sim 50 M_\odot$ \citep{MandeldeMink:2016,Marchant:2016}.
+
+One challenge for all of these channels is explaining merging components above $\sim 50\, M_\odot$.  Models suggest that black holes in this mass range should not exist, as their progenitors would lose mass through pulsations or explode completely in pair-instability supernovae, driven by a sudden drop in the radiation pressure support as high-energy photons spontaneously produce electron-positron pairs  \citep[e.g.,][]{Woosley:2017,Farmer:2019}.  While early gravitational-wave observations appeared consistent with a maximum component mass and perhaps even an excess of $\approx 30$--$40 M_\odot$ black holes due to pulsational pair-instability supernovae \citep[e.g.,][]{Stevenson:2019}, this is no longer the case with systems like GW190521, whose components fall into the anticipated pair-instability mass gap.  Possible explanations \citep{GW190521:astro} include multiple generations of black hole mergers in clusters \citep{Rodriguez:2019} or additional growth through accretion, particularly in an active galactic nucleus gas disk.
+
+Very asymmetric binaries, particularly GW190814, present another challenge for most evolutionary channels \citep{Zevin:2020,Mandel:2020}; one recently proposed scenario relies on the possibility that some massive progenitors may leave light remnants behind, particularly if their explosibility is enhanced by a change in compactness due to previous episodes of mass transfer \citep{Antoniadis:2021}.  
 
 \subsubsection{Mass ratios}
 The mass ratios of merging black-hole binaries produced through the isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints necessary to ensure stable mass transfer from the primary to the secondary and then dynamically unstable reverse mass transfer. However, mass ratios exceeding $2:1$ are expected to be more common at low metallicity \citep{Dominik:2012,Stevenson:2017}.
 
 Dynamically formed binaries may also favour comparable masses because the heaviest black holes in a cluster are most likely to merge, though more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or a $\gtrsim 100 M_\odot$ intermediate-mass black hole \citep{Mandel:2008,Belczynski:2014VMS}. 
 
-Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}.  \citet{Marchant:2016} concluded that nearly equal-mass black holes would be produced from the evolution of systems that were in contact (shared mass) on the main sequence, before disengaging during subsequent phases of chemically homogeneous evolution and proceeding along the pathway sketched out in \autoref{sec:CHE}. 
+Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}.  \citet{Marchant:2016,Riley:2020} concluded that nearly equal-mass black holes would be produced from the evolution of systems that were in contact (shared mass) on the main sequence, before disengaging during subsequent phases of chemically homogeneous evolution and proceeding along the pathway sketched out in section \ref{sec:CHE}. 
 
 \subsubsection{Black-hole spin magnitudes and directions}\label{BHspins}
 The spins of merging black holes may carry imprints of their evolutionary history. 
