--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -196,14 +196,14 @@ A wide variety of electromagnetic observations inform our understanding of the e
 \end{itemize}
 We first focus on X-ray binaries, the type of binary system with the closest connection to merging binary black holes, although only a small minority of black-hole X-ray binaries will ultimately evolve into merging black holes \citep[e.g.,][]{CygnusX3:2012,Neijssel:2020CygX1}. Black-hole X-ray binaries consist of a star transferring mass onto a black-hole companion, leading to the emission of X-ray radiation from the accretion disk surrounding the black hole.  We then discuss detached black-hole binaries, black-hole microlensing observations, and selection effects.
 
-\subsubsection{X-ray binaries}
+\subsubsection{X-ray binaries}\label{sec:XRB}
 
 X-ray binaries containing accreting black holes can be divided into two categories, low-mass and high-mass, in reference to the mass of the black hole's companion star. The accretion process differs between the two types: in low-mass X-ray binaries, the tidal field of the black hole is causing mass to stream from the companion on to the black hole in the process known as Roche-lobe overflow, while in high-mass X-ray binaries, the black hole accretes only a fraction of the material (stellar wind) driven off the companion's surface.
 
 \textbf{Black-Hole Masses:} 
 Until recently, black-hole X-ray binaries with dynamical mass measurements provided the only secure measurements of black-hole masses other than the gravitational-wave observations described above, though this is now changing thanks to observations of detached binaries and microlensing data (see section \ref{sec:lensing}).  \citet{Ozel:2010} and \citet{Farr:2011} summarise the mass distribution of black-hole X-ray binaries.  They find a distribution which ranges from $> 20\, M_\odot$ for the heaviest high-mass X-ray binaries to 4 or 5 solar masses for the lightest low-mass X-ray binaries, with a possible mass gap between neutron-star and black-hole masses, though see \cite{Kreidberg:2012} for possible biases in mass measurements of some low-mass X-ray binaries and section \ref{sec:lensing} for evolutionary selection effects.  The uncertainty regarding the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015} mean that the most massive confirmed stellar-mass black hole is Cygnus X-1, with a dynamical mass measurement of $21 \pm 2\, M_\odot$ \citep{MillerJones:2021}.   The measured masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses}, along with the masses of the observed gravitational-wave sources.  This figure does not include the speculative but potentially very exciting evidence for intermediate-mass black holes \citep{MillerColbert:2004,Greene:2019,Paynter:2021}; if few-hundred solar-mass black holes generically exist in globular clusters, they will substitute into merging binaries and ultimately be observable as gravitational-wave sources \citep[e.g.,][]{Mandel:2008,IMBBH:O1}.
 
-\textbf{Black-Hole Spin Magnitudes:} Black-hole X-ray binaries also provide an opportunity for measuring black-hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the accretion disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, which is assumed to correspond to the radius of the innermost stable circular orbit, a sensitive function of black-hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the inferred spins may suffer from significant systematics \citep[e.g.,][]{Kawano:2017}.  For example, out of six systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level for two systems, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$ \cite{MillerMiller:2015}.  However, for the remaining three systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
+\textbf{Black-Hole Spin Magnitudes:} Black-hole X-ray binaries also provide an opportunity for measuring black-hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the accretion disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, which is assumed to correspond to the radius of the innermost stable circular orbit, a sensitive function of black-hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the inferred spins may suffer from significant systematics \citep[e.g.,][]{Basak:2017,Kawano:2017}.  For example, out of six systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level for two systems, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$ \cite{MillerMiller:2015}.  However, for the remaining three systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
 
 \textbf{Black-Hole Spin Directions:} We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the microquasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for subsequent realignment during binary evolution, as described below.
 
@@ -422,26 +422,28 @@ The spins of merging black holes may carry imprints of their evolutionary histor
 
 Isolated binaries, including those formed through chemically homogeneous evolution, are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011,Tauris:2017}.  Meanwhile, the spin directions for dynamically formed binaries are likely to be distributed isotropically \citep[e.g.,][]{Rodriguez:2016spin}.  On the other hand, black holes merging through the Lidov-Kozai resonance in hierarchical triples could preferentially have spins in the orbital plane \citep{LiuLai:2018,RodriguezAntonini:2018}.
 
-Spin magnitudes may also depend sensitively on evolutionary history.  A massive star may contain a large amount of angular momentum, far in excess of the maximum allowed for a spinning black hole. However, the vast majority of that angular momentum will be contained in the outer layers of the star and can therefore readily be lost through winds or via envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017} or during the supernova itself \citep{Batta:2017,Schroeder:2018}.   This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}.     However, the spin magnitude measurements in X-ray binaries could be very sensitive to the modelling assumptions, and the systematic errors may dominate the statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}. Moreover, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes observed in gravitational waves \citep[][and see \autoref{environ}]{HotokezakaPiran:2017}.
+Spin magnitudes may also depend sensitively on evolutionary history.  A massive star may contain a large amount of angular momentum, far in excess of the maximum allowed for a spinning black hole. However, the vast majority of that angular momentum will be contained in the outer layers of the star and can therefore readily be lost through winds or via envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017}, or, less likely, during the supernova itself \citep{Batta:2017,Schroeder:2018}.   Consequently, if angular momentum transport within a star is at least moderately efficient, we may expect that the first-formed black hole in an isolated binary will always be slowly spinning, while the second-born black hole will be rapidly spinning only in the tightest binaries, when its helium star progenitor can be spun up through tides \citep{Bavera:2019,Belczynski:2020,MandelFragos:2020,Bavera:2021}.
 
-Gravitational-wave spin measurements have so far only constrained the effective spin, which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  The low effective spins of the first four detected merging black holes allowed \citet{Farr:2017} to conclude that either the spin directions were isotropically distributed or the spin magnitudes were low.
+This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}.     As discussed in section \ref{sec:XRB}, the spin magnitude measurements in X-ray binaries could be very sensitive to the modelling assumptions, and the systematic errors may dominate the statistical ones. Moreover, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes observed in gravitational waves \citep[][and see section \ref{environ}]{HotokezakaPiran:2017}.  In particular, black holes in high-mass X-ray binaries such as Cygnus X-1 could be spun up during mass transfer late in the primary's main sequence, when the core and envelope are still strongly coupled \citep{Qin:2018}.  Such systems may then be unlikely to produce merging black holes as they are too close to experience a common envelope and too wide to merge without one \citep{Neijssel:2020CygX1}, though some fraction could still merge through fortuitous natal kicks of the secondary, possibly explain the spin precession of GW151226 \citep[][but see \cite{GW151226,MateuLucena:2021}]{Chia:2021}.
+
+As discussed in section \ref{sec:GWevents}, there is active debate in the literature about the black-hole spin distribution of gravitational-wave events.  Gravitational-wave spin measurements most accurately constrain the effective spin $\chi_\mathrm{eff}$, which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  Low values of $\chi_\mathrm{eff}$ could point to either low spin magnitudes or isotropically directed spins, with the latter being the hallmark of isolated binary evolution.  The diverging conclusions regarding the fraction of preferentially spin-aligned binaries  \citep{GWTC2:pop,Roulet:2021,Callister:2021,Galaudage:2021} appear to be a consequence of the chosen parameterised model, which may be mis-specified in some cases.  At face value, the absence of confidently negative measurements of $\chi_\mathrm{eff}$ and the roughly one fifth fraction of observed binaries with positive $\chi_\mathrm{eff}$ inconsistent with zero suggest that80\% of observed binaries have non-spinning black holes while 20\% have moderate spin in the direction of the orbital angular momentum.  This appears consistent with isolated binary evolution with occasional tidal spin-up as the dominant channel.  The distribution of spin between binary components and the degree of spin precession remain open issues. 
 
 \subsubsection{Orbital eccentricities}
-	The orbital eccentricities of merging black-hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, isolated binaries are expected to merge on circular orbits. Dynamically formed systems may, however, retain detectable eccentricities at merger if their orbits are very tight at formation: the periapsis of a highly eccentric binary would need to be $\lesssim 10^4$ km in order for the eccentricity to exceed 0.1 when the gravitational-wave frequency reaches the minimum of the detector sensitivity band at 10 Hz.  Dynamical formation of very tight binaries may be possible through two-body captures in Galactic nuclei \citep{OLeary:2008} \citep[but see][]{Tsang:2013}; in some hierarchical triples evolving through the Lidov-Kozai mechanism \citep[e.g.,][]{AntoniniPerets:2012}; or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}. 
+	The orbital eccentricities of merging black-hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, isolated binaries are expected to merge on circular orbits. Dynamically formed systems may, however, retain detectable eccentricities at merger if their orbits are very tight at formation: the periapsis of a highly eccentric binary would need to be $\lesssim 10^4$ km in order for the eccentricity to exceed 0.1 when the gravitational-wave frequency reaches the minimum of the detector sensitivity band at 10 Hz.  Dynamical formation of very tight binaries may be possible through two-body captures in Galactic nuclei \citep[][but see \cite{Tsang:2013}]{OLeary:2008}; in some hierarchical triples evolving through the Lidov-Kozai mechanism \citep[e.g.,][]{AntoniniPerets:2012}; or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}.  We discussed the exciting indications of possible measurements of non-zero eccentricity \citep{RomeroShaw:2021} in section \ref{sec:GWevents}.
 
 
 \subsubsection{Formation environments}
 \label{environ}
 The evolutionary history of merging black holes is also dependent on their formation environments, particularly through the effect of chemical composition (metallicity) on stellar evolution and thereby black-hole mass.
 
-Black-hole masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the amount of ejecta during the supernova. Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}. Thus, the mass of the stellar core --- the convective region in the centre of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron --- determines the ultimate black\ilya{-}hole mass.  If left unperturbed, of order a third of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the black\ilya{-}hole remnant.
+Black-hole masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the amount of ejecta during the supernova. Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}. Thus, the mass of the stellar core --- the convective region in the centre of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron --- determines the ultimate black-hole mass.  If left unperturbed, a third to a half of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the black-hole remnant.
 
-The intense radiation from massive stars with luminosities $\sim 10^5 L_\odot$ drives significant winds, which can remove a large amount of material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than $1/3$ of the initial stellar mass. Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity  --- the fraction $Z$ of the star's mass contained in elements heavier than hydrogen and helium --- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the 2\% metallicity of our solar neighbourhood, massive stars lose enough mass via winds that maximum black\ilya{-}hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Figure \ref{fig:BHremnant} illustrates the dependence of compact remnant mass on metallicity. 
+The intense radiation from massive stars with luminosities $\gtrsim 10^5 L_\odot$ drives significant winds, which can remove a large amount of material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than $1/3$ of the initial stellar mass. Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity  --- the fraction $Z$ of the star's mass contained in elements heavier than hydrogen and helium --- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the 2\% metallicity of our solar neighbourhood, massive stars lose enough mass via winds that maximum black\ilya{-}hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Figure \ref{fig:BHremnant} illustrates the dependence of compact remnant mass on metallicity. 
  
 \begin{figure}
 	\centering
 	\includegraphics[width=0.5\textwidth]{BHremnantdelayed.png}
-	\caption{\label{fig:BHremnant} Remnant compact object mass from single stellar evolution for a given zero-age main sequence stellar mass, following the default COMPAS prescription for winds \citep{Stevenson:2017}  and the `delayed' \citet{Fryer:2012} supernova fallback prescription, at solar ($Z_\odot=0.02$) metallicity (blue) and a tenth solar (red).  COMPAS sets a compact object mass threshold of $2.5 M_\odot$ between neutron stars and black holes.
+	\caption{\label{fig:BHremnant} Remnant compact object mass from single stellar evolution for a given zero-age main sequence stellar mass, following the default COMPAS prescription for winds \citep{COMPAS:2021}  and the `delayed' \citet{Fryer:2012} supernova fallback prescription, at solar  (blue) and a tenth solar (red) metallicities.  
 	} 
 \end{figure}
 
